# sports-statistics

./: .gitignore  README.md  TODO.md  nfl history - clean.csv  pyproject.toml
data/: historical_games_points.parquet  team_alltime.csv
db/ddl/: historical_games_expected_points.sql  historical_games_points.sql  model_summary_team_strengths_model_v2.sql  schedules.sql  season_summary.sql  stan_output_model_v2.sql  team_alltime.sql  weekly_matchup.sql
model/: sim.py  utils.py
model/stan/: functions.stan  v1.stan  v2.stan
model/stan/game/: v1.stan
model/stan/season/: v1.stan  v2  v2.stan
source/nfl/: data.R  data_expected_points_game.R  data_new.R  drive_analysis.R  drive_sim.R  drives_test.stan  expected_points.R  historical_games_points.R  model_summary_team_strength_model_v2.R  nfl.Rproj  schedules.R  stan_data.R  tables.R  teams_alltime.R  testing_new_v2_with_gq.R  v1_drives.rds  v1_drives.stan  v1_expected_points.stan  v2_expected_points.stan  v3_expected_points.stan
www/: VISION.md
www/api/: funcs.py  main.py  models.py
www/react/: package-lock.json  package.json
www/react/src/app/: layout.tsx  page.tsx
www/react/src/app/standings/season-leaders/: page.tsx
www/react/src/app/standings/weekly-leaders/: page.tsx
www/react/src/components/: StandingsTable.tsx  TeamStrengthPlot.tsx
www/react/src/server/db/: schema.ts
www/react/src/types/: TeamStrength.ts
www/static/: styles.css
www/templates/: base.html  home.html  index.html  season-overall-strength.html
www/templates/partials/: season-overall-strengths-table.html
