[project]
name = "sports-statistics"
version = "0.1.0"
description = ""
authors = [
    {name = "Mason Veilleux",email = "masonjveilleux@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.27.1,<2.0.0)",
    "cmdstanpy (>=1.2.5,<2.0.0)",
    "duckdb (>=1.2.2,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
